@@ -144,6 +144,8 @@
           (http://www.packetfence.org/mantis/view.php?id=483)
         added reg-vlan configurator template
           (http://www.packetfence.org/mantis/view.php?id=482)
+        better way to set domain and host names
+          (http://www.packetfence.org/mantis/view.php?id=487)
 
 1.7.4
         undef operator in SNMP.pm
